# Kick-Rich-Presence-for-Discord

./: .gitignore  BUILD_GUIDE.md  BUILD_SUMMARY.md  DISTRIBUTION_README.md  KickStatusChecker.sln  MONITORING_IMPLEMENTATION.md  Makefile  README.md  build-and-package.ps1  build-and-package.sh  build.ps1  build.sh  example.cs  pyproject.toml  pytest.ini  quick-build.bat  requirements-dev.txt  requirements.txt  verify-build.sh
.github/workflows/: build-and-release.yml
KickStatusChecker/: DiscordPresenceManager.cs  KickStatusChecker.cs  KickStatusChecker.csproj  StreamInfo.cs
KickStatusChecker.Demo/: KickStatusChecker.Demo.csproj  Program.cs
KickStatusChecker.Tests/: KickStatusChecker.Tests.csproj  KickStatusCheckerTests.cs
KickStatusChecker.Wpf/: App.xaml  App.xaml.cs  KickStatusChecker.Wpf.Setup.wixproj  KickStatusChecker.Wpf.csproj  License.rtf  MainWindow.xaml  MainWindow.xaml.cs  Product.wxs  app.manifest
KickStatusChecker.Wpf/Commands/: RelayCommand.cs
KickStatusChecker.Wpf/Models/: AppSettings.cs  DiscordConfiguration.cs  StatusDisplayMode.cs  StatusDisplayOption.cs
KickStatusChecker.Wpf/Services/: DiscordPresenceManager.cs  Logger.cs  MonitoringService.cs  SettingsService.cs
KickStatusChecker.Wpf/ViewModels/: MainViewModel.cs
src/kick_presence/: __init__.py  __main__.py  config.py  logging_config.py  main.py
tests/: __init__.py  test_config.py  test_main.py
